# microsoft-authentication-library-for-python

./: .gitignore  .readthedocs.yaml  .travis.yml  CODEOWNERS  LICENSE  README.md  azure-pipelines.yml  contributing.md  index.html  requirements.txt  setup.cfg  setup.py  threat-model-review.txt  todo.txt  ubuntu-setup.sh
.ado/: azure-pipelines.yml  build.yml  esrp.yml  publish.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yaml
.github/workflows/: python-package.yml
dev/bench/: data.js  prune.py
docs/: broker-integration.md  cdt.md  conf.py  index.rst  requirements.txt
msal/: __init__.py  __main__.py  application.py  assertion.py  authority.py  broker.py  client_credential.py  crypto.py  exceptions.py  managed_identity.py  mex.py  oauth2.py  region.py  request.py  slc.md  throttled_http_client.py  token_cache.py  token_storage.py  token_storage_sqlalchemy.py  workload.py  wstrust_request.py  wstrust_response.py
msal/http/: __init__.py  http_client.py  http_response.py
msal/oauth2cli/: __init__.py  assertion.py  authcode.py  default_http_client.py  http.py  oauth2.py  oidc.py
msal/oauth2cli/aio/: oauth2.py  oidc.py
msal/oauth2cli/http/: __init__.py  http_client.py  http_request.py  http_response.py
oauth2cli/: assertion.py  authcode.py  oauth2.py  oauth2rt.py  oidc.py
oauth2cli/aio/: oauth2.py
sample/: .env.sample.entra-id  .env.sample.external-id  .env.sample.external-id-custom-domain  .env.sample.managed_identity  certificate_credential_sample.py  client_credential_sample.py  confidential_client_certificate_sample.py  confidential_client_sample.py  confidential_client_secret_sample.py  device_flow_sample.py  httpx.py  httpx_client.py  integrated_windows_authentication_sample.py  interactive_sample.py  managed_identity_sample.py  migrate_rt.py  username_password_sample.py  username_password_sample_with_classification.py  vault_jwt_sample.py
sample/authorization-code-flow-sample/: authorization_code_flow_sample.py
sample/authorization-code-flow-sample/templates/: display.html
tests/: __init__.py  authcode.py  broker-test.py  certificate-with-password.pfx  http_client.py  msaltest.py  out_final.pem  public_cert.txt  simulator.py  smoke-test.md  test_account_source.py  test_application.py  test_assertion.py  test_authcode.py  test_authority.py  test_authority_patch.py  test_benchmark.py  test_broker.py  test_ccs.py  test_client.py  test_client_aio.py  test_crypto.py  test_cryptography.py  test_e2e.py  test_force_refresh.py  test_individual_cache.py  test_mex.py  test_mi.py  test_oidc.py  test_throttled_http_client.py  test_token_cache.py  test_wstrust.py
