[bdist_wheel]
universal=1

[metadata]
project_urls =
    Changelog = https://github.com/AzureAD/microsoft-authentication-library-for-python/releases
    Documentation = https://msal-python.readthedocs.io/
    Questions = https://stackoverflow.com/questions/tagged/msal+python
    Feature/Bug Tracker = https://github.com/AzureAD/microsoft-authentication-library-for-python/issues
